# autosedance

./: .env.example  .gitignore  AGENTS.md  README.md  TRANSLATIONS.md  pyproject.toml  run_interactive.py
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts
apps/web/e2e/: project-page-smoke.spec.ts  start-servers.mjs
archive/: README.md  WORKFLOW.md  run_openclaw.py
deploy/ecs/: README.md
deploy/ecs/env/: prod.env.example  staging.env.example
deploy/ecs/nginx/: autosedance.conf  autosedance_domains.conf  autosedance_domains_http.conf
deploy/ecs/systemd/: autosedance-api-prod.service  autosedance-api-staging.service  autosedance-web.service
scripts/: archive_legacy_output.py  backfill_project_owners.py  i18n_check.py  wan_api_smoke.py
src/autosedance/: __init__.py  main.py
src/autosedance/clients/: __init__.py  doubao.py  seedance.py  wan.py
src/autosedance/config/: settings.py
src/autosedance/graph/: __init__.py  workflow.py
src/autosedance/nodes/: __init__.py  analyzer.py  assembler.py  scriptwriter.py  segmenter.py  video_gen.py
src/autosedance/prompts/: __init__.py  analyzer.py  loader.py  scriptwriter.py  segmenter.py
src/autosedance/server/: __init__.py  app.py  auth.py  authz.py  db.py  email.py  invites.py  models.py  passwords.py  ratelimit.py  schemas.py  storage.py  utils.py  worker.py
src/autosedance/state/: schema.py  (+1 more)
tests/: conftest.py  test_api_smoke.py  test_auth_otp.py  test_canon_utils.py  test_extract_json.py  test_merge_segments.py  test_video_concat_validation.py
(+74 files in other folders)
