[project]
name = "autosedance"
version = "0.1.0"
description = "Interactive AI video workflow (manual upload)"
requires-python = ">=3.9"

dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "volcengine-python-sdk>=1.0.0",
    # Web server + persistence
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
]

[project.scripts]
autosedance = "autosedance.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
